Json Package Files added

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>New FIle to be created</title>
 </head>
 <body>
-    <h1>Hi this is a corsera file</h1>
+    <h1>Hi this is a coursera file</h1>
 </body>
 </html>
